2019-Sep-08:   Version 0.6.0
-------------------------------------------------------------------------------
- Bandmap: Perform all screen updates in the main thread (avoid display problems
  with Curses which is not thread safe)
- Add "classic" DX cluster mode (linear display of all spots)
- Allow interactive use of the DX cluster (DX cluster menu item)
- Accessibility: Add option (on by default) to show the cursor in the terminal
  permanently ("cursoron" in the config file), helping users with screen
  readers.

2019-Jul-31:   Version 0.5.0
-------------------------------------------------------------------------------
- LoTW download: Show list of confirmed contacts after import.
- Usability: Flush keyboard input buffer frequently during blocking operations
  (e.g. scrolling) to avoid unexpected behaviour (such as further scrolling 
  after PgUp/Dwn was released)
- Include a minimal DX cluster / bandmap tool.
- Support for terminal window sizes beyond 80x25. Additional vertical size
  allows to show more QSOs in the log, horizontal size will be used for the
  bandmap / DX cluster (if configured)
- Include docs in the release tarball and install it to share/doc/yfklog
- Remove GNUisms from Makefile (tnx KC3NTG)

2019-Jun-30:   Version 0.4.0
-------------------------------------------------------------------------------
- Many small improvements contributed over the years, mostly by DF6FR and CT1DRB 
- Add support for LoTW upload and download directy from YFKlog (requires tqsl)
- Update dxcc algorithm to handle "new" style country files (with full calls
  marked with a =).

2008-Jan-31:   Version 0.3.5
-------------------------------------------------------------------------------
- Remote logging from fldigi; uses the same interface as Xlog.
- Custom award statistics. See manual for details.
- Sort order of the log- and the previous-QSO-field now customized by "logsort"
  and "prevsort" values.